--- a/front-end/src/app/pages/employee/home-funcionario/home-funcionario.component.html
+++ b/front-end/src/app/pages/employee/home-funcionario/home-funcionario.component.html
@@ -1,1 +1,32 @@
-<p>home-funcionario works!</p>
+<app-header-cliente></app-header-cliente>
+<div id="principal">
+  <app-navbar-cliente></app-navbar-cliente>
+  <main>
+    <h3>Minhas solicitações</h3>
+    <div class="tabela">
+      <table id="table-user">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Data de Abertura</th>
+            <th>Nome Cliente</th>
+            <th>Descrição</th>
+            <th>Ação</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let servico of servicos">
+            <td class="item">{{ servico.id }}</td>
+            <td class="item">{{ servico.data }}</td>
+            <td class="item">{{ servico.Nome }}</td>
+            <td class="item">{{ servico.descricaoErro | slice:0:30 }}</td>
+            <td class="item">
+              <button *ngIf="servico.status === 'ABERTA'" (click)="Efetuaorcamento(servico.id)">Efetuar
+                Orçamento</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
+</div>
