--- a/front-end/src/app/pages/employee/home-funcionario/home-funcionario.component.css
+++ b/front-end/src/app/pages/employee/home-funcionario/home-funcionario.component.css
@@ -8,87 +8,117 @@
 body {
   --bg-color: radial-gradient(circle at center, var(--gray), var(--black) 60%);
   background: var(--bg-color);
+  height: 100dvh;
+  width: 100%;
+  padding-top: 0.5dvh;
 }
 
-header {
-  --bg-color: transparent;
-  --height: 5dvh;
-  --max-height: 4dvh;
-
-  top: 0;
-  justify-content: space-between;
-  color: white;
-
-  width: 98%;
-  margin-left: 1%;
-  align-items: center;
-  position: fixed;
+#principal {
+  display: flex;
+  width: 100%;
 }
 
 main {
-  --bg-color: transparent;
-  --main-height: 83.5dvh;
-  height: 85.5dvh;
-  background: var(--bg-color);
-  width: 98%;
-  display: flex;
   margin-left: 1%;
-  margin-top: 13.5dvh;
-  color: white;
-}
-
-main .main-content {
-  margin-left: 1%;
-  width: 98%;
+  width: 82%;
   padding-top: 2%;
 }
 
-main .main-content h2,
-h3 {
+main h3 {
   color: white;
-  font-family: "Poppins", sans-serif;
+  font-family: sans-serif;
   font-size: 4dvh;
   padding-bottom: 0.5dvh;
 }
 
-main .main-content h2 {
-  text-align: center;
-  font-size: 7dvh;
-  margin-bottom: 3dvh;
+main .tabela {
+  width: 100%;
+  height: 75dvh;
+  margin: 0 auto;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
+  overflow-x: hidden;
+  position: relative;
 }
 
-main .main-content .item-detail {
-  height: 15dvh;
-  width: 50%;
-  margin: auto;
-}
-
-main .main-content .item-detail p {
-  color: white;
+main .tabela #table-user {
+  width: 100%;
+  max-height: 73dvh;
+  border-radius: 0.75rem;
+  font-weight: 600;
   font-family: "Poppins", sans-serif;
-  font-size: 3.5dvh;
-  padding-bottom: 0.5dvh;
-  height: 15dvh;
+  padding: 0.5rem;
+  cursor: pointer;
+  border-collapse: collapse;
+  background-color: white;
+  z-index: 1;
 }
 
-main .main-content .item-detail p span {
+main .tabela::-webkit-scrollbar {
+  width: 8px;
+  background-color: rgb(255, 123, 0);
+  z-index: 1;
+}
+
+main .tabela::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 4px;
+}
+
+main .tabela::-webkit-scrollbar-thumb:hover {
+  background-color: #666;
+}
+
+main .tabela #table-user td {
+  color: #333;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+main .tabela #table-user th {
+  background-color: rgb(255, 123, 0);
   color: white;
-  font-family: "Poppins", sans-serif;
-  font-size: 2dvh;
-  padding-bottom: 0.5dvh;
-  height: 5dvh;
-  padding-left: 3dvh;
+  font-weight: bold;
+  padding: 12px;
+  cursor: default;
+  position: sticky;
+  top: 0;
+  z-index: 2;
 }
 
-main .main-content #div-orcamento {
-  text-align: end;
+main .tabela #table-user tr {
+  min-height: 50px;
 }
 
-main .main-content .buttons {
-  text-align: center;
-  width: 50%;
-  height: 5dvh;
-  margin: auto;
+main .tabela #table-user::before {
+  content: "";
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  right: -2px;
+  bottom: -2px;
+  border-radius: 0.05rem;
+  z-index: -1;
+}
+
+main .tabela #table-user th,
+#table-user td {
+  border-bottom: 1px solid orange;
+  padding: 1rem;
+  text-align: left;
+  width: 20%;
+  height: 50px;
+  min-height: 50px;
+}
+
+
+main .tabela #table-user tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+main .tabela #table-user tr:hover {
+  background-color: #cfc7c7;
 }
 
 button {
@@ -118,6 +148,7 @@ button {
   vertical-align: baseline;
   width: 150px;
   height: 20px;
+  z-index: 1;
 }
 
 button:hover,
