--- a/front-end/src/app/pages/employee/relatorio-receitas/relatorio-receitas.component.css
+++ b/front-end/src/app/pages/employee/relatorio-receitas/relatorio-receitas.component.css
@@ -229,3 +229,20 @@ button:active {
   box-shadow: rgba(0, 0, 0, 0.06) 0 2px 4px;
   transform: translateY(0);
 }
+
+#button-categorias {
+  height: 2rem;
+  width: 10rem;
+  background: linear-gradient(135deg, orange, red);
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.875rem;
+  font-weight: 600;
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 0.5rem;
+  position: absolute;
+  top: 1rem;
+  right: 10rem;
+  transition: transform 0.2s;
+}
